* V1.15.0.1
  * Updated description of all CK APIs in Google format!
  * Added support to load YAML files via CK CLI: ck action @file.yaml
  * Fixed Yaml loader
  * Added support to download components with depenendecies from cKnowledge.io

* V1.15.0
  * Improved the integration with the open CK portal: https://cKnowledge.io
  * Fixed installation in virtual env / pip for Linux/Windows
  * Started working on a new Sphinx-based documentation
  * Check missing modules at cKnowledge.io
    (can be turned off by "ck set kernel --var.check_missing_modules=no")
  * Fixed ck.bat for Windows when CK is used from GitHub
  * Fixed ElasticSearch indexing error when index is empty
  * Fixed remote repo access
  * Added experimental mode to support multiple aliases for the same UID
    to be able to push renamed components to the cKnowledge.io portal
  * Started breaking CK kernel into sub modules:
    https://github.com/ctuning/ck/issues/107
  * Started improving ck scripts to automatically detect installation (Linux and Windows):
    https://github.com/ctuning/ck/issues/106
  * Added support to download missing components from cKnowledge.io

* V1.12.3
  * improved tests on Linux, MacOS and Windows
  * prototyped testing of the status of repositories (stable and warning)

* V1.12.2
  * fixed UTF-8 problem with README.md in setup.py

* V1.12.1
  * added first draft of the docs in the Sphinx format
  * fixed repo update
  * added backward compatibility for the search via ElasticSearch
  * do not ask for "web support" by default when adding actions
  * ck webhelp now shows published components at the CodeReef portal
  * ck webapi now shows module API at the CodeReef portal
  * Added "ck codereef <CID>" to show information about published components
    at the CodeReef portal
  * Allowed ' character in names of CK entries
  * Added 2020
  * Simplified Readme

* V1.11.4
  * fixed problem when ck-python.cfg contains non-existent python
  * fixed problem with allowed action_names 