@@ -30,6 +30,9 @@
     "import": {
       "desc": "register repository from current path in CK"
     },
+    "init": {
+      "desc": "init CK repo in a given directory"
+    },
     "print_deps": {
       "desc": "print dependencies on other shared repositories"
     },
@@ -77,7 +80,8 @@
     }
   },
   "actions_redirect": {
-    "import": "import_repo"
+    "import": "import_repo",
+    "init": "new_init"
   },
   "copyright": "See CK COPYRIGHT.txt for copyright details",
   "desc": "CK repositories",
